// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Button Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <button
    aria-label="Butron Text"
    className="button color-base"
    id="0"
  >
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary"
    id="1"
  >
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary"
    id="2"
  >
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error"
    id="3"
  >
    BUTTON
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Colors Compact 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <button
    aria-label="Butron Text"
    className="button color-base is-compact"
    id="0"
  >
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-compact"
    id="1"
  >
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-compact"
    id="2"
  >
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-compact"
    id="3"
  >
    BUTTON
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Colors Icon 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <button
    aria-label="Butron Text"
    className="button color-base"
    id="ColorAndIcon-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary"
    id="ColorAndIcon-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary"
    id="ColorAndIcon-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
    BUTTON
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error"
    id="ColorAndIcon-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    <div
      className="spacer vertical"
      style={
        Object {
          "height": "100%",
          "maxHeight": "auto",
          "width": 15,
        }
      }
    />
    BUTTON
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <button
    aria-label="Butron Text"
    className="button color-base"
    id="#1"
  >
    BUTTON
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Icon Only 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="0-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M9.5.5l9 16H.5zM9.5 10.5v-5"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <circle
            cx={9.5}
            cy={13.5}
            fill="currentColor"
            r={1}
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="0-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M9.5.5l9 16H.5zM9.5 10.5v-5"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <circle
            cx={9.5}
            cy={13.5}
            fill="currentColor"
            r={1}
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="0-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M9.5.5l9 16H.5zM9.5 10.5v-5"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <circle
            cx={9.5}
            cy={13.5}
            fill="currentColor"
            r={1}
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="0-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <path
            d="M9.5.5l9 16H.5zM9.5 10.5v-5"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <circle
            cx={9.5}
            cy={13.5}
            fill="currentColor"
            r={1}
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="1-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="1-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="1-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="1-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5 11.5l3 3 8.028-8"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="2-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M7.5 7.5l6 6M13.5 7.5l-6 6"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="2-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M7.5 7.5l6 6M13.5 7.5l-6 6"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="2-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M7.5 7.5l6 6M13.5 7.5l-6 6"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="2-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M7.5 7.5l6 6M13.5 7.5l-6 6"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="3-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="3-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="3-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="3-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="4-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 14.5l-4-4 4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="4-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 14.5l-4-4 4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="4-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 14.5l-4-4 4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="4-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 14.5l-4-4 4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="5-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        fill="currentColor"
        height={21}
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(2 2)"
        >
          <path
            d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="5-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        fill="currentColor"
        height={21}
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(2 2)"
        >
          <path
            d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="5-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        fill="currentColor"
        height={21}
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(2 2)"
        >
          <path
            d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="5-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        fill="currentColor"
        height={21}
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          transform="translate(2 2)"
        >
          <path
            d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-base is-round"
    id="6-0"
  >
    <span
      className="icon color-base size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M6.5 10.5l4 4.232 4-4.191M10.5 3.5v11M4.5 17.5h12"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-primary is-round"
    id="6-1"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M6.5 10.5l4 4.232 4-4.191M10.5 3.5v11M4.5 17.5h12"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-secondary is-round"
    id="6-2"
  >
    <span
      className="icon color-primary size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M6.5 10.5l4 4.232 4-4.191M10.5 3.5v11M4.5 17.5h12"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
  <button
    aria-label="Butron Text"
    className="button color-error is-round"
    id="6-3"
  >
    <span
      className="icon color-error size-sm"
    >
      <svg
        height={21}
        stroke="currentColor"
        viewBox="0 0 21 21"
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <path
            d="M6.5 10.5l4 4.232 4-4.191M10.5 3.5v11M4.5 17.5h12"
          />
        </g>
      </svg>
    </span>
    
    
  </button>
</div>
`;
